k8s-manifests/test-gateway-delete-after/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: un
spec:
  replicas: 1
  selector:
    matchLabels:
      app: un
  template:
    metadata:
      labels:
        app: un
    spec:
      containers:
        - name: whereami
          image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.20
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: un
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  type: NodePort
  selector:
    app: un
