k8s-manifests/test-gateway-delete-after/httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: gateway-routes
  labels:
    gateway: external-http
spec:
  parentRefs:
    - kind: Gateway
      name: external-http
    - kind: Gateway
      name: internal-http
  hostnames:
    - route.searce-aben.com
  rules:
    - backendRefs:
        - name: un
          port: 8080
